🐣 Add: logout and fix db

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,5 +2,5 @@ port: "8888"
 DataBaseHost: "localhost"
 DataBasePort: "5432"
 DataBaseUsername: "postgres"
-DataBaseDbname: "postgres"
+DataBaseDbname: "space"
 DataBaseSslmode: "disable"
